ingress-all-yaml-files/azure.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: azure
  labels:
    app: azure
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: azure
  template: 
    metadata: 
      labels: 
        app: azure
    spec: 
      containers: 
        - name: azure-container
          image: 451947743144.dkr.ecr.us-east-1.amazonaws.com/azure@sha256:bc4247b316ac8eb5522736c8b612cc5b029b79bbe09277719e485b32490d2fa3
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: azure-service
spec: 
  type: ClusterIP
  selector: 
    app: azure
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
