ingress-all-yaml-files/gcp.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: gcp
  labels:
    app: gcp
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: gcp
  template: 
    metadata: 
      labels: 
        app: gcp
    spec: 
      containers: 
        - name: gcp-container
          image: 451947743144.dkr.ecr.us-east-1.amazonaws.com/gcp@sha256:3cfc1f3914718b3bee8e804ecf099c43bc27765f17f433caaaf5596ed988eb27
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: gcp-service
spec: 
  type: ClusterIP
  selector:
    app: gcp
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
