ingress-all-yaml-files/index.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: index
  labels:
    app: index
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: index
  template: 
    metadata: 
      labels: 
        app: index
    spec: 
      containers: 
        - name: index-container
          image: 451947743144.dkr.ecr.us-east-1.amazonaws.com/index@sha256:c5e0e23b0ce0dabe1a54d599ee39751bda93f208e3afee2dd9dc7cad7bb8fba7
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: index-service
spec: 
  type: ClusterIP
  selector:
    app: gcp
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
