ingress-all-yaml-files/monolithic.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: monolithic
  labels:
    app: monolithic
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: monolithic
  template: 
    metadata: 
      labels: 
        app: monolithic
    spec: 
      containers: 
        - name: monolithic-container
          image: 451947743144.dkr.ecr.us-east-1.amazonaws.com/monolithic@sha256:3c74402b88a84749c33df0a0e822468974cd5fce436d54d451702665f9bede56
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: monolithic-service
spec: 
  type: ClusterIP
  selector:
    app: monolithic
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
