ingress-all-yaml-files/ingress.yaml
#kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.1/deploy/static/provider/cloud/deploy.yaml #-install ingress contr
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /aws
        pathType: Prefix
        backend:
          service:
            name: aws-service            # give service name metadata 
            port:
              number: 80
      - path: /azure
        pathType: Prefix
        backend:
          service:
            name: azure-service
            port:
              number: 80
      - path: /gcp
        pathType: Prefix
        backend:
          service:
            name: gcp-service
            port:
              number: 80
      - path: /monolithic
        pathType: Prefix
        backend:
          service:
            name: monolithic-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: index-service 
            port:
              number: 80
